--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -9,6 +9,9 @@
     </div>
     <div class="card-body">
         <h4>Welcome, {{ current_user.username }}</h4>
+        <div class="mt-2">
+            <a href="{{ url_for('admin.change_password') }}" class="btn btn-outline-primary">Change Password</a>
+        </div>
     </div>
 </div>
 
