--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -4,12 +4,9 @@
 
 {% block content %}
 <div class="card">
-    <div class="card-header bg-dark text-white">
-        <h3 class="mb-0">Your Competition Files</h3>
-    </div>
     <div class="card-body">
         <h4>Welcome, {{ current_user.username }}</h4>
-        <p>ID: {{ current_user.id }}</p>
+        <p>Team : {{ current_user.id }}</p>
         
         <div class="row mt-4">
             <div class="col-md-6">
